--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Pasta Fasta</title>
 
     <link rel="stylesheet" href="style.css">
@@ -26,5 +25,9 @@
             </nav>
         </div>
     </header>
+    <div class="main">
+        <img src="background1.png" alt="background1" class="background1">
+        <button class=" button1"><a href="#">Porosit tani</a></button> 
+    </div>
 </body>
 </html>
