Header, Background and button created

--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
             </nav>
         </div>
     </header>
-    <div class="main">
-        <img src="background1.png" alt="background1" class="background1">
-        <button class=" button1"><a href="#">Porosit tani</a></button> 
-    </div>
+    <main>
+        <div class="main">
+            <div class="main-background">
+                <!-- <img src="background1.png" alt="background1" class="background1"> -->
+                <button class=" button1"><a href="#">Porosit tani</a></button> 
+            </div>
+        </div>
+    </main>
 </body>
 </html>
