Krijimi i login page
Kemi krijuar fajllin login.hmtl dhe loginstyle.css dhe i kemi lidhur me faqen kryesore permese butonit "Porosit tani"

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
         <div class="main">
             <div class="main-background">
                 <!-- <img src="background1.png" alt="background1" class="background1"> -->
-                <button class=" button1"><a href="#">Porosit tani</a></button> 
+                <button class=" button1"><a href="login.html">Porosit tani</a></button> 
             </div>
         </div>
     </main>
+    <div class="location">
+        
+    </div>
 </body>
 </html>
