--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <title>Pasta Fasta</title>
 
     <link rel="stylesheet" href="style.css">
@@ -29,7 +31,7 @@
         <div class="main">
             <div class="main-background">
                 <!-- <img src="background1.png" alt="background1" class="background1"> -->
-                <button class=" button1"><a href="login.html">Porosit tani</a></button> 
+                <button class=" button1"><a href="login.html">Kyçu</a></button> 
             </div>
         </div>
     </main>
