--- a/index.html
+++ b/index.html
@@ -39,10 +39,142 @@
             </div>        
         </div>
     </main>
+    <h1 class="nxehta">Pasta të nxehta</h1>
 
-    <div class="Menu"></div>
-    <div class="Oferta"></div>
-    <div class="Lokacionet"></div>
+    <div class="Menu">
+        <div class="pasta-box">
+            <div class="pastas">               
+                    <div class="row">
+                        <div class="pasta-square">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                        <div class="pasta-square border">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                        <div class="pasta-square border">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                        <div class="pasta-square border">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="pasta-square">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                        <div class="pasta-square border">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                        <div class="pasta-square border">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                        <div class="pasta-square border">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <h1 class="nxehta">Pasta të ftohta</h1>
+
+                    <div class="row">
+                        <div class="pasta-square">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                        <div class="pasta-square border">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                        <div class="pasta-square border">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                        <div class="pasta-square border">
+                            <img src="Pasta1.jpg">
+                            <div class="name">
+                               <h1>Chicken Pesto and Broccoli</h1>
+                            </div>
+                            <div class="ingredients">
+                               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                            </div>
+                        </div>
+                    </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="Oferta">
+        <!-- <img src="oferta1.jpg" alt="">
+        <img src="oferta2.jpg" alt="">
+        <img src="oferta3.png" alt=""> -->
+    </div>
+    <div class="Lokacioni">
+        <p class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.9311058245285!2d21.15988795082908!3d42.66281532381869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13549fcaca1f205d%3A0xc01c68451329a5df!2sPasta%20Fasta%20Prishtine!5e0!3m2!1sen!2s!4v1640243969131!5m2!1sen!2s" width="100%" height="550px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </p>
+    </div>
     <div class="Kontakto"></div>
 
 </body>
