Validimi i username dhe password
Kemi bere validimin e perdoruesit dhe fjalekalimit duke i ruajtur te dhenat ne local storage

--- a/rrethnesh.html
+++ b/rrethnesh.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rreth Nesh</title>
     <link rel="stylesheet" href="rrethnesh.css">
+    <link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Fresca%7CMontserrat%7CRoboto%20Mono:wght@700%7CSpace%20Mono:ital,wght@0,400;1,700%7CWork%20Sans:wght@300">
 </head>
 <body>
 
