--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
     </div>
 
     <div id="Oferta">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
@@ -270,9 +276,10 @@
             <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
       
           </ul>
-          <p>&copy;2021 Nadine Coelho | All Rights Reserved</p>
+          
           <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </footer>
+    <p class="footer_p">2021 Dren Sokoli | All Rights Reserved</p>
 </body>
 </html>
