--- a/login.html
+++ b/login.html
@@ -17,9 +17,9 @@
                 <input type="text" id="emri" placeholder="Emri" required/>
                 <input type="text" id="mbiemri" placeholder="Mbiemri" required/>
                 <input type="text" id="perdoruesi" placeholder="Emri i përdoruesit" required/>
-                <input type="text" id="email" placeholder="Email" required/>
-                <input type="text" id="password" placeholder="Fjalëkalimi" required/>
-                <input type="text" id="pw_confirm" placeholder="Konfirmoni fjalëkalimin" required/>
+                <input type="email" id="email" placeholder="Email" required/>
+                <input type="password" id="password" placeholder="Fjalëkalimi" required/>
+                <input type="password" id="pw_confirm" placeholder="Konfirmoni fjalëkalimin" required/>
                 
                 <ul class="helper-text">
                     <li class="length">Fjalëkalimi duhet të ketë së paku 8 karaktere, një shkronjë të madhe dhe një numër.</li>
@@ -33,8 +33,8 @@
             <form class="login-form">
                 <br><br>
                 <input type="text" id="PERDORUESI" placeholder="Emri i përdoruesit" required/>
-                <input type="text" id="PASSWORD" placeholder="Fjalëkalimi"/>
-                <button id= "login_btn" type="submit" value="Login" onclick="check()">Kyçu</button>
+                <input type="password" id="PASSWORD" placeholder="Fjalëkalimi"/>
+                <button id= "login_btn" type="submit" value="Login" onclick="check()"><a href="index.html">Kyçu</a> </button>
                 <!-- <p class="message">S'jeni të regjistruar? <a href="#">Regjistrohuni</a></p> -->
 
                 
