--- a/index.html
+++ b/index.html
@@ -261,16 +261,14 @@
             <li class="social-icon__item"><a class="social-icon__link" href="#">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a></li>
-            <li class="social-icon__item"><a class="social-icon__link" href="#">
-                <ion-icon name="logo-linkedin"></ion-icon>
-              </a></li>
+            
             <li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/pastafastakosova/?hl=en">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a></li>
           </ul>
           <ul class="menu">
             <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
-            <li class="menu__item"><a class="menu__link" href="rrethnesh.html">Rreth Nesh</a></li>
+            <li class="menu__item"><a class="menu__link" href="rrethnesh.html">About us</a></li>
             <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
             <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
             <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
@@ -280,6 +278,14 @@
           <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     </footer>
-    <p class="footer_p">2021 Dren Sokoli | All Rights Reserved</p>
+    <ul class="creator">
+        <li class="creator_item">
+            <p class="footer_p">2021 Dren Sokoli | All Rights Reserved</p>
+
+        </li>
+        <li class="creator_item"><a class="social-icon__link" href="#">
+            <ion-icon name="logo-linkedin"></ion-icon>
+          </a></li>
+    </ul>
 </body>
 </html>
