Implementimi i linkut te LinkedIn te zhvilluesit ne footer

--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
 
         </li>
         <li class="creator_item"><a class="social-icon__link" href="#">
-            <ion-icon name="logo-linkedin"></ion-icon>
+            <a href="https://www.linkedin.com/in/dren-sokoli-0003a81a1/?originalSubdomain=gr"><ion-icon name="logo-linkedin"></ion-icon>
+</a>
           </a></li>
     </ul>
 </body>
